added two more selection functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,6 +90,8 @@ export(outcome_names)
 export(parameters)
 export(prob_improve)
 export(select_best)
+export(select_by_one_std_err)
+export(select_by_pct_loss)
 export(show_best)
 export(tunable)
 export(tune)
