Revert "no remote, bump cli version"
This reverts commit 79774c0e27ac97dadafafcb06eaf3e7a0013d8b4.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Imports:
     dials (>= 0.0.4),
     utils,
     glue,
-    cli (>= 2.0.0), 
+    cli (>= 1.9.9.9000), 
     crayon,
     yardstick,
     rsample,
@@ -46,4 +46,5 @@ Remotes:
     tidymodels/recipes,    
     tidymodels/parsnip,
     tidymodels/hardhat,
-    tidymodels/workflows
+    tidymodels/workflows,
+    r-lib/cli
