--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tune
 Title: Tidy Tuning Tools 
-Version: 0.0.0.9004
+Version: 0.0.1
 Authors@R: c(
     person(given = "Max", family = "Kuhn", email = "max@rstudio.com", role = c("aut", "cre")),
     person("RStudio", role = "cph"))
@@ -13,7 +13,7 @@ URL: https://github.com/tidymodels/tune
 Depends:
     ggplot2,
     R (>= 2.10),
-    recipes (>= 0.1.7.9002)
+    recipes (>= 0.1.8)
 Imports:
     dplyr (>= 0.8.3),
     rlang (>= 0.4.0),
@@ -22,29 +22,25 @@ Imports:
     dials (>= 0.0.4),
     utils,
     glue,
-    cli (>= 1.9.9.9000), 
+    cli (>= 1.1.0), 
     crayon,
     yardstick,
     rsample,
     tidyr,
     GPfit,
     foreach,
-    parsnip (>= 0.0.3.9000),
-    workflows (>= 0.0.0.9002),
-    hardhat (>= 0.0.0.9001)
+    parsnip (>= 0.0.4),
+    workflows (>= 0.1.0),
+    hardhat (>= 0.1.0)
 Suggests: 
     testthat,
     knitr,
     covr,
     kernlab,
-    xml2
+    xml2,
+    spelling
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.0.2
-Remotes:
-    tidymodels/recipes,    
-    tidymodels/parsnip,
-    tidymodels/hardhat,
-    tidymodels/workflows,
-    r-lib/cli
+RoxygenNote: 7.0.2.9000
+Language: en-US
