--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,16 +11,16 @@ Description: The ability to tune models is important. tune contains functions an
 License: GPL-2 
 URL: https://github.com/tidymodels/tune
 Depends:
-    ggplot2,
-    R (>= 2.10),
-    recipes (>= 0.1.8)
+    R (>= 2.10)
 Imports:
     dplyr (>= 0.8.3),
     rlang (>= 0.4.0),
     tibble (>= 2.1.3),
     purrr (>= 0.3.2),
     dials (>= 0.0.4),
+    recipes (>= 0.1.8),
     utils,
+    ggplot2,
     glue,
     cli (>= 1.1.0), 
     crayon,
