make class metrics roc auc and accuracy

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,6 +179,6 @@ importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
 importFrom(utils,packageVersion)
 importFrom(yardstick,accuracy)
-importFrom(yardstick,kap)
 importFrom(yardstick,rmse)
+importFrom(yardstick,roc_auc)
 importFrom(yardstick,rsq)
