--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -21,6 +21,7 @@ jobs:
         - { os: windows-latest, r: '3.6'}
         - { os: macOS-latest, r: '3.6'}
         - { os: macOS-latest, r: 'devel'}
+        - { os: ubuntu-16.04, r: '3.6', cran: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
