--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ URL: https://github.com/tidymodels/tune
 Depends:
     ggplot2,
     R (>= 2.10),
-    recipes (>= 0.1.7.9002)
+    recipes (>= 0.1.8)
 Imports:
     dplyr (>= 0.8.3),
     rlang (>= 0.4.0),
@@ -22,7 +22,7 @@ Imports:
     dials (>= 0.0.4),
     utils,
     glue,
-    cli (>= 1.9.9.9000), 
+    cli (>= 2.0.0), 
     crayon,
     yardstick,
     rsample,
@@ -31,7 +31,7 @@ Imports:
     foreach,
     parsnip (>= 0.0.3.9000),
     workflows (>= 0.0.0.9002),
-    hardhat (>= 0.0.0.9001)
+    hardhat (>= 0.1.0)
 Suggests: 
     testthat,
     knitr,
@@ -43,8 +43,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.1.9000
 Remotes:
-    tidymodels/recipes,    
     tidymodels/parsnip,
-    tidymodels/hardhat,
-    tidymodels/workflows,
-    r-lib/cli
+    tidymodels/workflows
