--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Description: The ability to tune models is important. tune contains functions an
     classes to be used in conjunction with other tidymodels packages for 
     finding reasonable values of hyper-parameters in models, pre-processing
     methods, and post-processing steps. 
-License: GPL-2 
+License: MIT + file LICENSE
 URL: https://github.com/tidymodels/tune
 Depends:
     R (>= 2.10)
@@ -44,4 +44,3 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.0.2.9000
 Language: en-US
-
