initial prototypes for template functions
No tests yet, massive global variable false positives when checking, no comments, and tune always printed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,6 +93,8 @@ export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
 export(show_best)
+export(template_glmnet)
+export(template_xgboost)
 export(tunable)
 export(tune)
 export(tune_args)
@@ -145,12 +147,15 @@ importFrom(glue,glue_collapse)
 importFrom(parsnip,get_from_env)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
+importFrom(recipes,recipe)
 importFrom(rlang,":=")
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
+importFrom(rlang,enexpr)
 importFrom(rlang,env_get)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,expr)
+importFrom(rlang,expr_text)
 importFrom(rlang,is_false)
 importFrom(rlang,is_function)
 importFrom(rlang,is_missing)
