comment function and examples for #167

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ export(select_by_one_std_err)
 export(select_by_pct_loss)
 export(show_best)
 export(template_glmnet)
+export(template_knn)
 export(template_xgboost)
 export(tunable)
 export(tune)
