--- a/NAMESPACE
+++ b/NAMESPACE
@@ -93,8 +93,10 @@ export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
 export(show_best)
+export(template_earth)
 export(template_glmnet)
 export(template_knn)
+export(template_ranger)
 export(template_xgboost)
 export(tunable)
 export(tune)
