Actually exporting the method would help

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
 S3method(print,prob_improve)
+S3method(print,tune_results)
 S3method(tunable,boost_tree)
 S3method(tunable,linear_reg)
 S3method(tunable,logistic_reg)
