--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
-pandoc: 2.9.1
-pkgdown: 1.4.1.9000
-pkgdown_sha: b7045baef5c241c61ecf06d95b8bd4f12a3fc622
+pandoc: 2.9.2.1
+pkgdown: 1.5.1
+pkgdown_sha: ~
 articles:
   acquisition_functions: acquisition_functions.html
   optimizations: extras/optimizations.html
@@ -8,5 +8,8 @@ articles:
   text_analysis: extras/text_analysis.html
   getting_started: getting_started.html
   grid: grid.html
-last_built: 2020-04-02T03:49Z
+last_built: 2020-05-11T18:24Z
+urls:
+  reference: https://tune.tidymodels.org/reference
+  article: https://tune.tidymodels.org/articles
 
