--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ S3method(parameters,workflow)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
+S3method(print,control_grid)
 S3method(print,prob_improve)
 S3method(print,tune_results)
 S3method(tunable,boost_tree)
