added imports for new autoplot code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -136,13 +136,16 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,xlab)
