--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ importFrom(dplyr,vars)
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_string)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,facet_grid)
