new coord for regression plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(conf_bound)
 export(control_bayes)
 export(control_grid)
 export(control_resamples)
+export(coord_obs_pred)
 export(exp_improve)
 export(expo_decay)
 export(extract_model)
@@ -156,6 +157,7 @@ importFrom(glue,glue_collapse)
 importFrom(parsnip,get_from_env)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
+importFrom(rlang,"%||%")
 importFrom(rlang,":=")
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
