--- a/NAMESPACE
+++ b/NAMESPACE
@@ -74,6 +74,7 @@ export(conf_bound)
 export(control_bayes)
 export(control_grid)
 export(control_resamples)
+export(coord_obs_pred)
 export(exp_improve)
 export(expo_decay)
 export(extract_model)
@@ -136,13 +137,17 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
 importFrom(ggplot2,aes)
+importFrom(ggplot2,aes_)
+importFrom(ggplot2,aes_string)
 importFrom(ggplot2,autoplot)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_errorbar)
+importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,xlab)
@@ -152,6 +157,7 @@ importFrom(glue,glue_collapse)
 importFrom(parsnip,get_from_env)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
+importFrom(rlang,"%||%")
 importFrom(rlang,":=")
 importFrom(rlang,call2)
 importFrom(rlang,call_name)
