--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -17,7 +17,8 @@ jobs:
         config:
           - {os: windows-latest, r: '3.6'}
           - {os: windows-latest, r: 'devel'}
-          - {os: macOS-latest, r: '3.6'}
+          - {os: macOS-latest, r: '3.6', dev_dplyr = true}
+          - {os: macOS-latest, r: '3.6', dev_dplyr = false}
           - {os: ubuntu-16.04, r: '3.6', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
 
     env:
@@ -62,6 +63,14 @@ jobs:
         run: |
           remotes::install_deps(dependencies = TRUE)
           remotes::install_cran("rcmdcheck")
+        shell: Rscript {0}
+
+      - name: Install dev dependencies
+        if: runner.os == 'macOS' && matrix.config.dev_dplyr
+        run: |
+          remotes::install_github("tidyverse/dplyr")
+          remotes::install_github("tidymodels/rsample")
+          remotes::install_github("tidymodels/dials")
         shell: Rscript {0}
 
       - name: Session info
