--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -66,7 +66,7 @@ jobs:
         shell: Rscript {0}
 
       - name: Install dev dependencies
-        if: runner.os == 'macOS' && matrix.config.dev_dplyr
+        if: runner.os == 'macOS-latest' && matrix.config.dev_dplyr
         run: |
           remotes::install_github("tidyverse/dplyr")
           remotes::install_github("tidymodels/rsample")
