--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -17,8 +17,8 @@ jobs:
         config:
           - {os: windows-latest, r: '3.6'}
           - {os: windows-latest, r: 'devel'}
-          - {os: macOS-latest, r: '3.6', dev_dplyr = true}
-          - {os: macOS-latest, r: '3.6', dev_dplyr = false}
+          - {os: macOS-latest, r: '3.6', dev_dplyr: true}
+          - {os: macOS-latest, r: '3.6', dev_dplyr: false}
           - {os: ubuntu-16.04, r: '3.6', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
 
     env:
