--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ vignettes/extras/text_analysis_cache
 vignettes/getting_started_cache
 vignettes/extras/svm_classification_cache
 vignettes/articles/Classification_cache/*
+R/plots.R
