--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ vignettes/getting_started_cache
 vignettes/extras/svm_classification_cache
 vignettes/articles/Classification_cache/*
 R/plots.R
+tests/testthat/Rplots.pdf
