changed prefix to use_ and added color

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -100,16 +100,16 @@ export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
 export(show_best)
-export(template_earth)
-export(template_glmnet)
-export(template_knn)
-export(template_ranger)
-export(template_xgboost)
 export(tunable)
 export(tune)
 export(tune_args)
 export(tune_bayes)
 export(tune_grid)
+export(use_earth)
+export(use_glmnet)
+export(use_kknn)
+export(use_ranger)
+export(use_xgboost)
 import(workflows)
 importFrom(GPfit,GP_fit)
 importFrom(cli,cli_alert)
