--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -3,6 +3,7 @@ url: https://tune.tidymodels.org
 template:
   package: tidytemplate
   params:
+    theme: tidymodels
     part_of: <a href="https://tidymodels.org">tidymodels</a>
     footer: tune is a part of the <strong>tidymodels</strong> ecosystem, a collection of modeling packages designed with common APIs and a shared philosophy.
 
@@ -23,6 +24,7 @@ reference:
     - conf_bound
     - starts_with("control")
     - autoplot.tune_results
+    - coord_obs_pred
     - expo_decay
     - starts_with("collect")
     - show_best
