--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,6 +1,6 @@
 pandoc: 2.9.2.1
-pkgdown: 1.5.1.9000
-pkgdown_sha: ac78596154e403df5f4e683f2185d88225a0fea6
+pkgdown: 1.5.1
+pkgdown_sha: ~
 articles:
   acquisition_functions: acquisition_functions.html
   optimizations: extras/optimizations.html
@@ -8,7 +8,7 @@ articles:
   text_analysis: extras/text_analysis.html
   getting_started: getting_started.html
   grid: grid.html
-last_built: 2020-05-27T00:10Z
+last_built: 2020-06-04T03:20Z
 urls:
   reference: https://tune.tidymodels.org/reference
   article: https://tune.tidymodels.org/articles
