small helper function to get current text colors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
 export(fit_resamples)
+export(get_tune_colors)
 export(last_fit)
 export(load_pkgs)
 export(min_grid)
