changes for tidymodels/recipes#488

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ S3method(tunable,step_tokenize)
 S3method(tunable,step_umap)
 S3method(tunable,step_woe)
 S3method(tunable,workflow)
+S3method(tune_args,check)
 S3method(tune_args,model_spec)
 S3method(tune_args,recipe)
 S3method(tune_args,step)
