--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ S3method(min_grid,nearest_neighbor)
 S3method(outcome_names,formula)
 S3method(outcome_names,recipe)
 S3method(outcome_names,terms)
+S3method(outcome_names,tune_results)
 S3method(outcome_names,workflow)
 S3method(parameters,model_spec)
 S3method(parameters,recipe)
