--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,11 @@ S3method(vec_ptype2,tune_results.tune_results)
 S3method(vec_restore,iteration_results)
 S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
+export(.get_tune_metric_names)
+export(.get_tune_metrics)
+export(.get_tune_outcome_names)
+export(.get_tune_parameter_names)
+export(.get_tune_parameters)
 export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
