--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ S3method(min_grid,nearest_neighbor)
 S3method(outcome_names,formula)
 S3method(outcome_names,recipe)
 S3method(outcome_names,terms)
+S3method(outcome_names,tune_results)
 S3method(outcome_names,workflow)
 S3method(parameters,model_spec)
 S3method(parameters,recipe)
@@ -107,6 +108,11 @@ S3method(vec_ptype2,tune_results.tune_results)
 S3method(vec_restore,iteration_results)
 S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
+export(.get_tune_metric_names)
+export(.get_tune_metrics)
+export(.get_tune_outcome_names)
+export(.get_tune_parameter_names)
+export(.get_tune_parameters)
 export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
