--- a/NAMESPACE
+++ b/NAMESPACE
@@ -117,6 +117,7 @@ export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
 export(conf_bound)
+export(conf_mat_resampled)
 export(control_bayes)
 export(control_grid)
 export(control_resamples)
