infrastucture for known engine arguments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,11 +45,13 @@ S3method(print,control_grid)
 S3method(print,prob_improve)
 S3method(print,tune_results)
 S3method(tunable,boost_tree)
+S3method(tunable,decision_tree)
 S3method(tunable,linear_reg)
 S3method(tunable,logistic_reg)
+S3method(tunable,mars)
 S3method(tunable,model_spec)
 S3method(tunable,multinomial_reg)
-S3method(tunable,nearest_neighbor)
+S3method(tunable,rand_forest)
 S3method(tunable,recipe)
 S3method(tunable,step)
 S3method(tunable,step_embed)
