Import last from dplyr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -176,6 +176,7 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
 importFrom(dplyr,inner_join)
+importFrom(dplyr,last)
 importFrom(dplyr,mutate)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,one_of)
