--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -15,13 +15,13 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - {os: windows-latest, r: '3.6'}
           - {os: windows-latest, r: 'devel'}
-          - {os: macOS-latest, r: '3.6', old_dplyr: true,  dev_tidymodels: true}
-          - {os: macOS-latest, r: '3.6', old_dplyr: true,  dev_tidymodels: false}
-          - {os: macOS-latest, r: '3.6', old_dplyr: false, dev_tidymodels: true}
-          - {os: macOS-latest, r: '3.6', old_dplyr: false, dev_tidymodels: false}
-          - {os: ubuntu-16.04, r: '3.6', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
+          - {os: windows-latest, r: 'release'}
+          - {os: macOS-latest, r: 'release', old_dplyr: true,  dev_tidymodels: true}
+          - {os: macOS-latest, r: 'release', old_dplyr: true,  dev_tidymodels: false}
+          - {os: macOS-latest, r: 'release', old_dplyr: false, dev_tidymodels: true}
+          - {os: macOS-latest, r: 'release', old_dplyr: false, dev_tidymodels: false}
+          - {os: ubuntu-16.04, r: 'release', rspm: "https://demo.rstudiopm.com/all/__linux__/xenial/latest"}
 
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
