another try at getting CRAN vctrs

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -83,6 +83,19 @@ jobs:
         shell: Rscript {0}
 
 
+      - name: Install dev dependencies
+        if: runner.os == 'macOS' && matrix.config.dev_tidymodels
+        run: |
+          remotes::install_github("tidymodels/rsample")
+          remotes::install_github("tidymodels/dials")
+        shell: Rscript {0}
+
+      - name: Ensure CRAN vctrs
+        if: runner.os == 'macOS'
+        run: |
+          remotes::install_cran("vctrs")
+        shell: Rscript {0}
+
       - name: Session info
         run: |
           options(width = 100)
