first pass at a filtering function + no irises (#230)
* first pass at a filtering function

* text cases

* updated test and examples objects with config column

* refreshed test cases for .config column

* .config now added to .extracts

* udpated test cases

* updated test case

* bestter determination of parameter names

* punt on estimate_tune_results changes

* new dplyr switch

* switched the arguements

* changed dplyr.summarise.inform option

* removed .groups in tests

* Fixed Rd files

* iris-free documentation

* added an option to filter parameters using conditional statements

* missing library() calls in examples

* try using cran vctrs

* another try at getting CRAN vctrs

* two skips until vctrs is fixed

* commented out

* hopefully fix the skips

--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -73,6 +73,7 @@ jobs:
         run: |
           remotes::install_github("tidymodels/rsample")
           remotes::install_github("tidymodels/dials")
+          remotes::install_cran("vctrs")
         shell: Rscript {0}
 
       - name: Install old dplyr
@@ -81,6 +82,19 @@ jobs:
           remotes::install_version("dplyr", "0.8.5")
         shell: Rscript {0}
 
+
+      - name: Install dev dependencies
+        if: runner.os == 'macOS' && matrix.config.dev_tidymodels
+        run: |
+          remotes::install_github("tidymodels/rsample")
+          remotes::install_github("tidymodels/dials")
+        shell: Rscript {0}
+
+      - name: Ensure CRAN vctrs
+        if: runner.os == 'macOS'
+        run: |
+          remotes::install_cran("vctrs")
+        shell: Rscript {0}
 
       - name: Session info
         run: |
