--- a/NAMESPACE
+++ b/NAMESPACE
@@ -128,6 +128,7 @@ export(exp_improve)
 export(expo_decay)
 export(extract_model)
 export(extract_recipe)
+export(filter_parameters)
 export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
