exported internal functions for new tune_* functions in other packages

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -116,6 +116,11 @@ export(.get_tune_outcome_names)
 export(.get_tune_parameter_names)
 export(.get_tune_parameters)
 export(autoplot)
+export(check_initial)
+export(check_metrics)
+export(check_rset)
+export(check_time)
+export(check_workflow)
 export(collect_metrics)
 export(collect_predictions)
 export(conf_bound)
@@ -124,6 +129,9 @@ export(control_bayes)
 export(control_grid)
 export(control_resamples)
 export(coord_obs_pred)
+export(empty_ellipses)
+export(encode_set)
+export(estimate_tune_results)
 export(exp_improve)
 export(expo_decay)
 export(extract_model)
@@ -134,8 +142,12 @@ export(finalize_recipe)
 export(finalize_workflow)
 export(fit_resamples)
 export(get_tune_colors)
+export(is_preprocessor)
+export(is_recipe)
+export(is_workflow)
 export(last_fit)
 export(load_pkgs)
+export(metrics_info)
 export(min_grid)
 export(min_grid.boost_tree)
 export(min_grid.linear_reg)
@@ -143,10 +155,12 @@ export(min_grid.logistic_reg)
 export(min_grid.mars)
 export(min_grid.multinom_reg)
 export(min_grid.nearest_neighbor)
+export(new_iteration_results)
 export(no_param)
 export(outcome_names)
 export(parameters)
 export(prob_improve)
+export(pull_rset_attributes)
 export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
@@ -156,6 +170,8 @@ export(tune)
 export(tune_args)
 export(tune_bayes)
 export(tune_grid)
+export(val_class_and_single)
+export(val_class_or_null)
 import(vctrs)
 import(workflows)
 importFrom(GPfit,GP_fit)
