--- a/NAMESPACE
+++ b/NAMESPACE
@@ -115,6 +115,7 @@ export(.get_tune_metrics)
 export(.get_tune_outcome_names)
 export(.get_tune_parameter_names)
 export(.get_tune_parameters)
+export(.get_tune_workflow)
 export(autoplot)
 export(collect_metrics)
 export(collect_predictions)
