--- a/NAMESPACE
+++ b/NAMESPACE
@@ -262,6 +262,7 @@ importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
+importFrom(utils,object.size)
 importFrom(utils,packageVersion)
 importFrom(yardstick,accuracy)
 importFrom(yardstick,rmse)
