--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -39,7 +39,8 @@ jobs:
 
       - name: Query dependencies
         run: |
-          install.packages('remotes')
+          # getting dev remotes for better behaviour re: installation order
+          install.packages("https://github.com/r-lib/remotes/archive/master.tar.gz", repos = NULL)
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
           writeLines(sprintf("R-%i.%i", getRversion()$major, getRversion()$minor), ".github/R-version")
         shell: Rscript {0}
