--- a/NAMESPACE
+++ b/NAMESPACE
@@ -225,6 +225,7 @@ importFrom(ggplot2,ylab)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(parsnip,get_from_env)
+importFrom(purrr,map_int)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
 importFrom(rlang,"%||%")
