added recipe and workflow S3 methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,8 @@ S3method(print,control_grid)
 S3method(print,prob_improve)
 S3method(print,tune_results)
 S3method(required_pkgs,model_spec)
+S3method(required_pkgs,recipe)
+S3method(required_pkgs,step)
 S3method(required_pkgs,workflow)
 S3method(tunable,boost_tree)
 S3method(tunable,decision_tree)
