--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ S3method(parameters,workflow)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
+S3method(pretty,manual_rset)
 S3method(print,control_grid)
 S3method(print,prob_improve)
 S3method(print,tune_results)
