--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Imports:
     rlang (>= 0.4.0),
     tibble (>= 2.1.3),
     purrr (>= 0.3.2),
-    dials (>= 0.0.4),
+    dials (>= 0.0.8.9001),
     recipes (>= 0.1.9),
     utils,
     ggplot2,
@@ -48,3 +48,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Language: en-US
+Remotes:
+    tidymodels/dials
