--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     cli (>= 2.0.0),
     crayon,
     yardstick,
-    rsample,
+    rsample (>= 0.0.7.9000),
     tidyr,
     GPfit,
     foreach,
@@ -48,3 +48,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Language: en-US
+Remotes:
+    tidymodels/rsample
