collect_metrics() as S3 generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,9 @@ S3method("names<-",resample_results)
 S3method("names<-",tune_results)
 S3method(autoplot,resample_results)
 S3method(autoplot,tune_results)
+S3method(collect_metrics,default)
+S3method(collect_metrics,tune_race)
+S3method(collect_metrics,tune_results)
 S3method(fit_resamples,default)
 S3method(fit_resamples,formula)
 S3method(fit_resamples,model_spec)
