more logging infrastucture and mgs for #269

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -156,6 +156,7 @@ export(is_recipe)
 export(is_workflow)
 export(last_fit)
 export(load_pkgs)
+export(message_wrap)
 export(metrics_info)
 export(min_grid)
 export(min_grid.boost_tree)
