Install doMC in pkgdown

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -35,6 +35,7 @@ jobs:
           remotes::install_deps(dependencies = TRUE)
           remotes::install_github("tidyverse/tidytemplate")
           remotes::install_cran("tidymodels")
+          remotes::install_cran("doMC")
           remotes::install_cran("textrecipes")
           remotes::install_cran("textfeatures")
           install.packages("pkgdown")
