--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -36,6 +36,7 @@ jobs:
           remotes::install_github("tidyverse/tidytemplate")
           remotes::install_cran("tidymodels")
           remotes::install_cran("doMC")
+          remotes::install_cran("glmnet")
           remotes::install_cran("textrecipes")
           remotes::install_cran("textfeatures")
           install.packages("pkgdown")
