--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,6 +34,7 @@ reference:
     - starts_with("finalize")
     - coord_obs_pred
     - conf_mat_resampled
+    - example_ames_knn
   - title: Low-Level Functions
     contents:
     - merge.recipe
