--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -41,6 +41,7 @@ jobs:
           remotes::install_cran("doParallel")
           remotes::install_cran("textrecipes")
           remotes::install_cran("textfeatures")
+          remotes::install_cran("stopwords")
           install.packages("pkgdown")
         shell: Rscript {0}
 
