exported min_grid helper and expanded methods for #292 and #288

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,13 +26,17 @@ S3method(load_pkgs,model_spec)
 S3method(load_pkgs,workflow)
 S3method(merge,model_spec)
 S3method(merge,recipe)
+S3method(min_grid,C5_rules)
 S3method(min_grid,boost_tree)
+S3method(min_grid,cubist_rules)
 S3method(min_grid,linear_reg)
 S3method(min_grid,logistic_reg)
 S3method(min_grid,mars)
 S3method(min_grid,model_spec)
 S3method(min_grid,multinom_reg)
 S3method(min_grid,nearest_neighbor)
+S3method(min_grid,pls)
+S3method(min_grid,rule_fit)
 S3method(outcome_names,formula)
 S3method(outcome_names,recipe)
 S3method(outcome_names,terms)
@@ -149,6 +153,7 @@ export(filter_parameters)
 export(finalize_model)
 export(finalize_recipe)
 export(finalize_workflow)
+export(fit_max_value)
 export(fit_resamples)
 export(get_tune_colors)
 export(is_preprocessor)
@@ -159,12 +164,16 @@ export(load_pkgs)
 export(message_wrap)
 export(metrics_info)
 export(min_grid)
+export(min_grid.C5_rules)
 export(min_grid.boost_tree)
+export(min_grid.cubist_rules)
 export(min_grid.linear_reg)
 export(min_grid.logistic_reg)
 export(min_grid.mars)
 export(min_grid.multinom_reg)
 export(min_grid.nearest_neighbor)
+export(min_grid.pls)
+export(min_grid.rule_fit)
 export(new_iteration_results)
 export(no_param)
 export(outcome_names)
