--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(min_grid,model_spec)
 S3method(min_grid,multinom_reg)
 S3method(min_grid,nearest_neighbor)
 S3method(min_grid,pls)
+S3method(min_grid,poisson_reg)
 S3method(min_grid,rule_fit)
 S3method(outcome_names,formula)
 S3method(outcome_names,recipe)
@@ -173,6 +174,7 @@ export(min_grid.mars)
 export(min_grid.multinom_reg)
 export(min_grid.nearest_neighbor)
 export(min_grid.pls)
+export(min_grid.poisson_reg)
 export(min_grid.rule_fit)
 export(new_iteration_results)
 export(no_param)
