Reexport tunable + required_pkgs from generics

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -232,6 +232,8 @@ importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
+importFrom(generics,required_pkgs)
+importFrom(generics,tunable)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_string)
