Remove tunable method for step (only in recipes)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,7 +65,6 @@ S3method(tunable,model_spec)
 S3method(tunable,multinomial_reg)
 S3method(tunable,rand_forest)
 S3method(tunable,recipe)
-S3method(tunable,step)
 S3method(tunable,step_embed)
 S3method(tunable,step_ngram)
 S3method(tunable,step_texthash)
@@ -232,6 +231,7 @@ importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
+importFrom(generics,min_grid)
 importFrom(generics,required_pkgs)
 importFrom(generics,tunable)
 importFrom(ggplot2,aes)
