--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,9 @@ S3method("[",tune_results)
 S3method("names<-",iteration_results)
 S3method("names<-",resample_results)
 S3method("names<-",tune_results)
+S3method(augment,last_fit)
+S3method(augment,resample_results)
+S3method(augment,tune_results)
 S3method(autoplot,resample_results)
 S3method(autoplot,tune_results)
 S3method(collect_metrics,default)
@@ -109,6 +112,7 @@ export(.get_tune_outcome_names)
 export(.get_tune_parameter_names)
 export(.get_tune_parameters)
 export(.get_tune_workflow)
+export(augment)
 export(autoplot)
 export(check_initial)
 export(check_metrics)
@@ -211,6 +215,7 @@ importFrom(dplyr,vars)
 importFrom(foreach,"%dopar%")
 importFrom(foreach,foreach)
 importFrom(foreach,getDoParName)
+importFrom(generics,augment)
 importFrom(generics,min_grid)
 importFrom(generics,required_pkgs)
 importFrom(generics,tunable)
