--- a/NAMESPACE
+++ b/NAMESPACE
@@ -189,6 +189,7 @@ importFrom(dials,encode_unit)
 importFrom(dials,is_unknown)
 importFrom(dials,parameters)
 importFrom(dials,parameters_constr)
+importFrom(doRNG,"%dorng%")
 importFrom(dplyr,"%>%")
 importFrom(dplyr,anti_join)
 importFrom(dplyr,arrange)
