collect_predictions now a generic

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,8 @@ S3method(autoplot,tune_results)
 S3method(collect_metrics,default)
 S3method(collect_metrics,tune_race)
 S3method(collect_metrics,tune_results)
+S3method(collect_predictions,default)
+S3method(collect_predictions,tune_results)
 S3method(fit_resamples,default)
 S3method(fit_resamples,model_spec)
 S3method(fit_resamples,workflow)
