add a pretty method for tune objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ S3method(parameters,workflow)
 S3method(predict,conf_bound)
 S3method(predict,exp_improve)
 S3method(predict,prob_improve)
+S3method(pretty,tune_results)
 S3method(print,control_grid)
 S3method(print,prob_improve)
 S3method(print,tune_results)
@@ -63,6 +64,7 @@ S3method(tunable,mars)
 S3method(tunable,model_spec)
 S3method(tunable,multinomial_reg)
 S3method(tunable,rand_forest)
+S3method(tunable,svm_poly)
 S3method(tunable,workflow)
 S3method(tune_args,check)
 S3method(tune_args,model_spec)
