--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,23 +13,23 @@ URL: https://github.com/tidymodels/tune, https://tune.tidymodels.org
 Depends:
     R (>= 2.10)
 Imports:
-    dplyr (>= 1.0.0),
-    rlang (>= 0.4.0),
-    purrr (>= 0.3.2),
+    cli (>= 2.0.0),
     dials (>= 0.0.9),
-    recipes (>= 0.1.15),
+    dplyr (>= 1.0.0),
+    foreach,
+    generics (>= 0.1.0),    
     ggplot2,
     glue,
-    cli (>= 2.0.0),
-    yardstick (>= 0.0.7),
+    GPfit,
+    parsnip (>= 0.1.4),
+    purrr (>= 0.3.2),
+    recipes (>= 0.1.15),
+    rlang (>= 0.4.0),
     rsample (>= 0.0.8),
     tidyr,
-    GPfit,
-    foreach,
-    parsnip (>= 0.1.4),
-    workflows (>= 0.2.1),
     vctrs (>= 0.3.0),
-    generics (>= 0.1.0)
+    workflows (>= 0.2.1),
+    yardstick (>= 0.0.7)
 Suggests: 
     covr,
     hardhat (>= 0.1.5),
