added .get_fingerprint for tune objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method("[",tune_results)
 S3method("names<-",iteration_results)
 S3method("names<-",resample_results)
 S3method("names<-",tune_results)
+S3method(.get_fingerprint,tune_results)
 S3method(augment,last_fit)
 S3method(augment,resample_results)
 S3method(augment,tune_results)
@@ -110,6 +111,7 @@ S3method(vec_ptype2,tune_results.tune_results)
 S3method(vec_restore,iteration_results)
 S3method(vec_restore,resample_results)
 S3method(vec_restore,tune_results)
+export(.get_fingerprint)
 export(.get_tune_metric_names)
 export(.get_tune_metrics)
 export(.get_tune_outcome_names)
@@ -257,6 +259,7 @@ importFrom(rlang,ns_env)
 importFrom(rlang,quo_get_expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(rsample,.get_fingerprint)
 importFrom(stats,dnorm)
 importFrom(stats,model.frame)
 importFrom(stats,model.matrix)
