--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,7 @@ Imports:
     purrr (>= 0.3.2),
     recipes (>= 0.1.15),
     rlang (>= 0.4.0),
-    rsample (>= 0.0.8),
+    rsample (>= 0.0.8.9001),
     tibble (>= 2.1.3),
     tidyr,
     vctrs (>= 0.3.0),
@@ -46,3 +46,5 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9000
 Language: en-US
+Remotes:
+    tidymodels/rsample
