--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,8 @@ S3method(min_grid,nearest_neighbor)
 S3method(min_grid,pls)
 S3method(min_grid,poisson_reg)
 S3method(min_grid,rule_fit)
+S3method(obj_sum,resample_results)
+S3method(obj_sum,tune_results)
 S3method(outcome_names,formula)
 S3method(outcome_names,recipe)
 S3method(outcome_names,terms)
@@ -176,6 +178,8 @@ export(select_best)
 export(select_by_one_std_err)
 export(select_by_pct_loss)
 export(show_best)
+export(size_sum.resample_results)
+export(size_sum.tune_results)
 export(tunable)
 export(tune)
 export(tune_args)
@@ -271,6 +275,7 @@ importFrom(stats,qt)
 importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,update)
+importFrom(tibble,obj_sum)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(yardstick,accuracy)
