require new tibble, reexport size_sum

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ S3method(min_grid,pls)
 S3method(min_grid,poisson_reg)
 S3method(min_grid,rule_fit)
 S3method(obj_sum,resample_results)
+S3method(obj_sum,tune_race)
 S3method(obj_sum,tune_results)
 S3method(outcome_names,formula)
 S3method(outcome_names,recipe)
@@ -59,6 +60,7 @@ S3method(print,prob_improve)
 S3method(print,tune_results)
 S3method(required_pkgs,model_spec)
 S3method(required_pkgs,workflow)
+S3method(size_sum,tune_results)
 S3method(tunable,boost_tree)
 S3method(tunable,decision_tree)
 S3method(tunable,linear_reg)
@@ -274,6 +276,7 @@ importFrom(stats,sd)
 importFrom(stats,setNames)
 importFrom(stats,update)
 importFrom(tibble,obj_sum)
+importFrom(tibble,size_sum)
 importFrom(tidyr,nest)
 importFrom(tidyr,unnest)
 importFrom(yardstick,accuracy)
