--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,14 @@ Package: tune
 Title: Tidy Tuning Tools 
 Version: 0.1.3
 Authors@R: c(
-    person(given = "Max", family = "Kuhn", email = "max@rstudio.com", role = c("aut", "cre")),
-    person("RStudio", role = "cph"))
+    c(person(given = "Max",
+             family = "Kuhn",
+             role = c("aut", "cre"),
+             email = "max@rstudio.com",
+             comment = c(ORCID = "0000-0003-2402-136X")),
+      person(given = "RStudio",
+             role = "cph"))
+      )
 Description: The ability to tune models is important. 'tune' contains functions and
     classes to be used in conjunction with other 'tidymodels' packages for 
     finding reasonable values of hyper-parameters in models, pre-processing
@@ -25,7 +31,7 @@ Imports:
     purrr (>= 0.3.2),
     recipes (>= 0.1.15),
     rlang (>= 0.4.0),
-    rsample (>= 0.0.8.9001),
+    rsample (>= 0.0.9),
     tibble (>= 3.1.0),
     tidyr,
     vctrs (>= 0.3.0),
