--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,13 @@ Package: tune
 Title: Tidy Tuning Tools 
 Version: 0.1.3
 Authors@R: c(
-    c(person(given = "Max",
+      person(given = "Max",
              family = "Kuhn",
              role = c("aut", "cre"),
              email = "max@rstudio.com",
              comment = c(ORCID = "0000-0003-2402-136X")),
       person(given = "RStudio",
-             role = "cph"))
+             role = "cph")
       )
 Description: The ability to tune models is important. 'tune' contains functions and
     classes to be used in conjunction with other 'tidymodels' packages for 
