PR has been merged on the workflows side

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,4 +53,4 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9000
 Language: en-US
 Remotes:
-    tidymodels/workflows@feature/required-pkgs
+    tidymodels/workflows
