temporarily change development value to "release" to get the page build for CRAN version

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -7,7 +7,9 @@ template:
     part_of: <a href="https://tidymodels.org">tidymodels</a>
     footer: tune is a part of the <strong>tidymodels</strong> ecosystem, a collection of modeling packages designed with common APIs and a shared philosophy.
 
-destination: docs
+development:
+  mode: release
+
 home:
   strip_header: true
 
