--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ S3method(extract_mold,tune_results)
 S3method(extract_preprocessor,tune_results)
 S3method(extract_recipe,tune_results)
 S3method(extract_spec_parsnip,tune_results)
+S3method(extract_workflow,last_fit)
+S3method(extract_workflow,tune_results)
 S3method(fit_resamples,default)
 S3method(fit_resamples,model_spec)
 S3method(fit_resamples,workflow)
@@ -154,8 +156,7 @@ export(extract_mold)
 export(extract_preprocessor)
 export(extract_recipe)
 export(extract_spec_parsnip)
-export(extract_workflow.last_fit)
-export(extract_workflow.tune_results)
+export(extract_workflow)
 export(filter_parameters)
 export(finalize_model)
 export(finalize_recipe)
@@ -261,6 +262,7 @@ importFrom(hardhat,extract_mold)
 importFrom(hardhat,extract_preprocessor)
 importFrom(hardhat,extract_recipe)
 importFrom(hardhat,extract_spec_parsnip)
+importFrom(hardhat,extract_workflow)
 importFrom(parsnip,get_from_env)
 importFrom(purrr,map_int)
 importFrom(recipes,all_outcomes)
