--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,6 +35,7 @@ Imports:
     tibble (>= 3.1.0),
     tidyr,
     vctrs (>= 0.3.0),
+    withr,
     workflows (>= 0.2.2),
     yardstick (>= 0.0.7)
 Suggests: 
