--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ Imports:
     glue,
     GPfit,
     hardhat (>= 0.1.5.9000),
+    lifecycle (>= 1.0.0),
     parsnip (>= 0.1.4),
     purrr (>= 0.3.2),
     recipes (>= 0.1.15),
