--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,5 +54,5 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1.9000
 Language: en-US
 Remotes: 
-    tidymodels/hardhat@feature/extract-generics,
-    tidymodels/workflows@extracts
+    tidymodels/hardhat,
+    tidymodels/workflows
