--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,14 @@ S3method(collect_metrics,tune_race)
 S3method(collect_metrics,tune_results)
 S3method(collect_predictions,default)
 S3method(collect_predictions,tune_results)
+S3method(extract_fit_engine,tune_results)
+S3method(extract_fit_parsnip,tune_results)
+S3method(extract_mold,tune_results)
+S3method(extract_preprocessor,tune_results)
+S3method(extract_recipe,tune_results)
+S3method(extract_spec_parsnip,tune_results)
+S3method(extract_workflow,last_fit)
+S3method(extract_workflow,tune_results)
 S3method(fit_resamples,default)
 S3method(fit_resamples,model_spec)
 S3method(fit_resamples,workflow)
@@ -141,8 +149,14 @@ export(encode_set)
 export(estimate_tune_results)
 export(exp_improve)
 export(expo_decay)
+export(extract_fit_engine)
+export(extract_fit_parsnip)
 export(extract_model)
+export(extract_mold)
+export(extract_preprocessor)
 export(extract_recipe)
+export(extract_spec_parsnip)
+export(extract_workflow)
 export(filter_parameters)
 export(finalize_model)
 export(finalize_recipe)
@@ -242,6 +256,13 @@ importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
+importFrom(hardhat,extract_fit_engine)
+importFrom(hardhat,extract_fit_parsnip)
+importFrom(hardhat,extract_mold)
+importFrom(hardhat,extract_preprocessor)
+importFrom(hardhat,extract_recipe)
+importFrom(hardhat,extract_spec_parsnip)
+importFrom(hardhat,extract_workflow)
 importFrom(parsnip,get_from_env)
 importFrom(purrr,map_int)
 importFrom(recipes,all_outcomes)
