Implement merge for recipes steps as a S3 method so packae developers can override the behavior for specific steps.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ S3method(load_pkgs,model_spec)
 S3method(load_pkgs,workflow)
 S3method(merge,model_spec)
 S3method(merge,recipe)
+S3method(merge,step)
 S3method(min_grid,C5_rules)
 S3method(min_grid,boost_tree)
 S3method(min_grid,cubist_rules)
