--- a/NAMESPACE
+++ b/NAMESPACE
@@ -242,6 +242,7 @@ importFrom(generics,augment)
 importFrom(generics,min_grid)
 importFrom(generics,required_pkgs)
 importFrom(generics,tunable)
+importFrom(generics,tune_args)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,aes_)
 importFrom(ggplot2,aes_string)
