--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,8 @@ S3method(autoplot,tune_results)
 S3method(collect_metrics,default)
 S3method(collect_metrics,tune_race)
 S3method(collect_metrics,tune_results)
+S3method(collect_notes,default)
+S3method(collect_notes,tune_results)
 S3method(collect_predictions,default)
 S3method(collect_predictions,tune_results)
 S3method(extract_fit_engine,tune_results)
@@ -137,6 +139,7 @@ export(check_rset)
 export(check_time)
 export(check_workflow)
 export(collect_metrics)
+export(collect_notes)
 export(collect_predictions)
 export(conf_bound)
 export(conf_mat_resampled)
