--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,7 +55,6 @@ LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Remotes: 
-    r-lib/generics,
-    tidymodels/recipes@methods-tune_args,
-    tidymodels/parsnip@method-tune_args,
-    tidymodels/workflows@method-tune_args
+    tidymodels/recipes,
+    tidymodels/parsnip,
+    tidymodels/workflows
