run workflow also on PR

--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches: [main, master]
     tags: ['*']
+  pull_request:
+    branches: [main, master]
+    tags: ['*']
 
 name: pkgdown
 
