dev versions for pkgdown site

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,8 @@ Suggests:
     spelling,
     testthat,
     xml2
-Config/Needs/website: dimRed, kknn, tidymodels, tidyverse/tidytemplate
+Config/Needs/website: dimRed, kknn, tidymodels, tidymodels/recipes, 
+    tidymodels/parsnip, tidymodels/workflows, tidyverse/tidytemplate
 Encoding: UTF-8
 Language: en-US
 LazyData: true
