--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -49,7 +49,7 @@ Suggests:
     spelling,
     testthat,
     xml2
-Config/Needs/website: dimRed, kknn, tidymodels, tidymodels/recipes, 
+Config/Needs/website: dimRed, doParallel, kknn, tidymodels, tidymodels/recipes, 
     tidymodels/parsnip, tidymodels/workflows, tidyverse/tidytemplate
 Encoding: UTF-8
 Language: en-US
