--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -2,6 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 # Add Config/Needs/website: tidyverse/tidytemplate to DESCRIPTION
 on:
+  workflow_dispatch:
   push:
     branches: [main, master]
     tags: ['*']
@@ -24,7 +25,7 @@ jobs:
         with:
           use-public-rspm: true
 
-      - uses: r-lib/actions/setup-r-dependencies@v1
+      - uses: r-lib/actions/setup-r-dependencies@pak1
         with:
           extra-packages: pkgdown
           needs: website
