remove methods for `tunable()`

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: tune
 Title: Tidy Tuning Tools
-Version: 0.1.6.9001
+Version: 0.1.6.9002
 Authors@R: c(
     person("Max", "Kuhn", , "max@rstudio.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0003-2402-136X")),
@@ -26,7 +26,7 @@ Imports:
     GPfit,
     hardhat (>= 0.1.6),
     lifecycle (>= 1.0.0),
-    parsnip (>= 0.1.7.9000),
+    parsnip (>= 0.1.7.9003),
     purrr (>= 0.3.2),
     recipes (>= 0.1.17.9000),
     rlang (>= 0.4.0),
@@ -35,7 +35,7 @@ Imports:
     tidyr,
     vctrs (>= 0.3.0),
     withr,
-    workflows (>= 0.2.3.9000),
+    workflows (>= 0.2.4.9001),
     yardstick (>= 0.0.7)
 Suggests: 
     covr,
@@ -47,9 +47,9 @@ Suggests:
     testthat,
     xml2
 Remotes: 
-    tidymodels/parsnip,
+    tidymodels/parsnip@tunable,
     tidymodels/recipes,
-    tidymodels/workflows
+    tidymodels/workflows@tunable
 Config/Needs/website:
     pkgdown,
     tidymodels,
