remove required_pkgs from tune
import required_pkgs from parsnip

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -68,7 +68,6 @@ S3method(pretty,tune_results)
 S3method(print,control_grid)
 S3method(print,prob_improve)
 S3method(print,tune_results)
-S3method(required_pkgs,model_spec)
 S3method(size_sum,tune_results)
 S3method(tune_bayes,default)
 S3method(tune_bayes,model_spec)
@@ -253,6 +252,7 @@ importFrom(hardhat,extract_recipe)
 importFrom(hardhat,extract_spec_parsnip)
 importFrom(hardhat,extract_workflow)
 importFrom(parsnip,get_from_env)
+importFrom(parsnip,required_pkgs)
 importFrom(purrr,map_int)
 importFrom(recipes,all_outcomes)
 importFrom(recipes,all_predictors)
