move `tune()` to from tune to hardhat

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -251,6 +251,7 @@ importFrom(hardhat,extract_preprocessor)
 importFrom(hardhat,extract_recipe)
 importFrom(hardhat,extract_spec_parsnip)
 importFrom(hardhat,extract_workflow)
+importFrom(hardhat,tune)
 importFrom(parsnip,get_from_env)
 importFrom(parsnip,required_pkgs)
 importFrom(purrr,map_int)
