--- a/NAMESPACE
+++ b/NAMESPACE
@@ -140,6 +140,7 @@ export(extract_fit_engine)
 export(extract_fit_parsnip)
 export(extract_model)
 export(extract_mold)
+export(extract_parameter_set_dials)
 export(extract_preprocessor)
 export(extract_recipe)
 export(extract_spec_parsnip)
@@ -247,6 +248,7 @@ importFrom(glue,glue_collapse)
 importFrom(hardhat,extract_fit_engine)
 importFrom(hardhat,extract_fit_parsnip)
 importFrom(hardhat,extract_mold)
+importFrom(hardhat,extract_parameter_set_dials)
 importFrom(hardhat,extract_preprocessor)
 importFrom(hardhat,extract_recipe)
 importFrom(hardhat,extract_spec_parsnip)
